--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
-    "game-react": "file:/Users/zhangxiang/gitwork/react/game-react",
+    "game-react": "file:E:/Workstation/react/game-react",
     "gifler": "^0.1.0",
     "konva": "^8.3.12",
     "nanoid": "^4.0.0",
