--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "sass": "^1.54.8",
+    "sass-loader": "^12.3.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
