--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@illuxiza/one-client": "^0.1.0",
+    "@illuxiza/one-client-react": "^0.1.0",
     "@reduxjs/toolkit": "^1.8.5",
-    "game-react": "file:E:/Workstation/react/game-react",
     "gifler": "^0.1.0",
     "konva": "^8.3.12",
     "nanoid": "^4.0.0",
